# confidence-gated-q

./: .gitignore  .zenodo.json  ASOC_FINAL_PACKAGE_README.txt  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.sha256  PROVENANCE.md  README.md  REPRODUCIBILITY.md  REVISION_LOG_ASOC.md  REVISION_LOG_MLWA.md  STRICT_REVIEW_FIX_LOG.md  artifact_audit.json  asoc_strong_revision_audit.json  environment.yml  final_audit_report.txt  final_checksums.sha256  pyproject.toml  requirements-tested-uav.txt  requirements-tested.txt  requirements-uav.txt  requirements.txt  submission_readiness_audit.json
configs/: adaptive_gate_compact_validation.json  application_navigation_case_study.json  application_risk_variants_30seed.yaml  approximate_support_baseline_validation.json  approximate_support_full_reviewer_protocol.json  confirmatory.json  confirmatory_extended_compact.json  cost_support_metrics.json  development.json  dqn_sensitivity_compact.json  dqn_sensitivity_minigrid.json  dqn_strong_validation.json  dqn_tuning_development.json  dqn_validation_confirmatory.json  dqn_validation_minigrid.json  external_minigrid.json  fuzzy_reliability_confirmatory_30seed.yaml  fuzzy_reliability_shift_confirmatory_30seed.yaml  fuzzy_sensitivity_ablation.json  minigrid_extended_diagnostic.json  minigrid_supplemental.json  quick_reproduction_smoke.yaml  smoke_application_navigation_case_study.json  stronger_baseline_validation.json  stronger_neural_full_reviewer_protocol.json  support_abstention_confirmatory.json  support_abstention_replication.json  tau_sensitivity_compact.json  tau_sensitivity_minigrid.json  uav_pybullet_30seed.yaml  uav_pybullet_smoke.yaml  uav_sensorized_motor_30seed.yaml  uav_sensorized_motor_smoke.yaml
paper/: ARTIFACT_README.md  CONFIRMATORY_PROTOCOL.md  CONTENTS.md  LITERATURE_REVIEW.md  RESULTS_SUMMARY.md  author_biography.md  cover_letter.md  declarations.md  highlights.txt  manuscript.tex  references.bib  title_page.md
scripts/: aggregate_application_risk.py  aggregate_approx_support.py  aggregate_fuzzy_ablation.py  aggregate_fuzzy_reliability.py  aggregate_results.py  aggregate_strong_baselines.py  aggregate_uav_sensorized_validation.py  aggregate_uav_validation.py  audit_artifact.py  audit_asoc_strong_revision.py  audit_results.py  audit_submission_readiness.py  generate_asoc_strong_revision_figures.py  generate_asoc_strong_revision_tables.py  generate_mlwa_assets.py  generate_submission_assets.py  generate_submission_figures.py  generate_submission_tables.py  migrate_legacy_results.py  pack_raw_parts.py  package_submission.py  reproduce_all.py  result_reporting.py  run_adaptive_gate_validation.py  run_application_case_study.py  run_application_risk_variants.py  run_approx_support_experiments.py  run_benchmark.py  run_fuzzy_ablation.py  run_strong_baselines.py  run_uav_validation.py
tables/: table_application_risk_adjusted.csv  table_approx_support.csv  table_fuzzy_ablation.csv  (+6 more)
(+289 files in other folders)
